--- a/微信小程序开发注意事项.md
+++ b/微信小程序开发注意事项.md
@@ -2,7 +2,7 @@
 
 
 
-### recycle-view组件
+### [recycle-view](https://developers.weixin.qq.com/miniprogram/dev/extended/component-plus/recycle-view.html)组件
 
 - #### item的高度必须一致
 
