--- a/微信小程序开发注意事项.md
+++ b/微信小程序开发注意事项.md
@@ -25,6 +25,10 @@
 - #### 只能通过用户主动触发按钮进行发送
 
   唤起分享方法的代码只能构建于button之上，因此样式上就有了一定的限制，并且必须要用户点击，无法做到一进入页面就弹出分享窗口。
+  
+- #### 分享的快照
+
+  只能是屏幕最上面的部分，如果想指定区域，就用canvas画吧。 
 
 ### 小程序组件
 
@@ -70,7 +74,7 @@
 
 - #### 原生组件性能问题
 
-  `<cover-image>`等原生组件因为需要小程序端和原生组件进行通信来控制它的变化，因此性能上会有一定的影响。地图界面之前卡顿的主要原因就是这个。
+  `<cover-image>`等原生组件因为需要小程序端和原生组件进行通信来控制它的变化，因此性能上会有一定的影响。地图界面之前卡顿的主要原因就是这个。并且原生组件的样式层级`z-index`一定高于其他组件，且对于css较新的样式渲染有一些瑕疵。
 
 ### 小程序接口
 
@@ -81,6 +85,8 @@
 - #### 接口维护问题
 
   官方对于新接口维护的测试做的不够，例如Canvas绘制图片有开发新的接口，但是保存图片接口没有进行相应的更新。导致在使用新接口绘制好了图片以后无法进行保存。
+  
+  接口甚至是重要的接口都可能会进行更新并且不保留旧版本，例如登录的接口。需要留意微信小程序官方的通知消息，及时调整，否则整个小程序可能完全不能继续使用。
 
 ### setData频率和性能限制
 
@@ -101,4 +107,6 @@
 - #### 拆包缺陷
 
   拆包时有一些限制，例如所有使用到的公共类库必须存在于主包当中，这就意味着我们要拆包的话，主包必须包含近400kb的类库代码。可以并应当对分包进行预加载，但是要注意预加载的时机，不能影响当前所在页面的网络阻塞。
+
+
 
